--- a/Actividad 1.html
+++ b/Actividad 1.html
@@ -3,6 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <style>
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        form li + li {
+            margin-top: 1em;
+        }
+
+        label {
+            /* Normalizar tamaños de etiquetas */
+            display: inline-block;
+            width: 90px;
+            text-align: right;
+        }
+
+        input,
+        textarea {
+            /* Normalizar fuente */
+            font: 1em sans-serif;
+            /* Normaliar tamaños */
+            width: 300px;
+            box-sizing: border-box; 
+            border: 1px solid #999;
+        }
+
+        input:focus,
+        textarea:focus {
+            /* Color del borde */
+            border-color: #A5F115;
+        }
+
+        textarea {
+            /* Alinear campos de texto y etiquetas */
+            vertical-align: top;
+            /* Espacio suficiente para texto */
+            height: 5em;
+        }
+
+        .button {
+            /* Posición alineada a los cuadros */
+            padding-left: 90px;
+        }
+
+        button {
+            /* Margen de separación */
+            margin-left: 0.5em;
+        }
+    </style>
   </head>
   <body>
     <h1>Prueba de página web</h1>
@@ -10,10 +61,29 @@
 
     <p>Está es una prueba de funcionamiento de</p>
 
-    <ul> <!-- changed to list in the tutorial -->
+    <ul> 
       <li>Visual Code como editor de texto</li>
       <li>Posibilidad de elaborar una página</li>
       <li>Forma de realizar una página</li>
     </ul>
+    <form action="/página-de-prueba" method="post">
+        <ul>
+            <li>
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="user_name" />
+            </li>
+            <li>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_mail" />
+            </li>
+            <li>
+                <label for="msg">Mensaje:</label>
+                <textarea id="msg" name="user_message"></textarea>
+            </li>
+            <li class="button">
+                <button type="submit">Enviar</button>
+            </li>
+        </ul>
+    </form>
   </body>
 </html>
